===================

o Added a panel to the guide window status bar that shows if the entry
  you're viewing is a short or a long.

o Added "Home" navigation to the guide window. This takes you to the first
  entry in a guide.

o Added a "Focus When Finished" option to the global finder window. When set
  the global finder will display itself and grab focus when a find operation
  has finished.

Changes since v2.9
==================

o The file save dialog used for saving source didn't do an overwrite prompt
  check. Fixed.

o Ensured that the edit control in the in-entry find dialog gets focus and
  that the content is highlighted when the dialog is re-focused.

o When a search finishes in the global finder the status bar now tells you
  how many items were found and how long the search took.

Changes since v2.8
==================

o You can now drag a guide from the guide manager and drop it on the
  background of the main window to open a guide.

o You can now drag a bookmark from the bookmark window and drop it on the
  background of the main window to open a bookmark.

o You can now drag a hit from the global finder and drop it on the
  background of the main window to open the hit.

o Implemented a "search" macro for the DDE support.

o Added a clear facility to the bookmarks window.

Changes since v2.7
==================

o Added physical information about a guide to the guide information dialog.

o The see also menu of a guide entry will, where possible, include any URLs
  found in the entry in the see-also menu. When you select such an item from
  the menu the URL will be passed to the operating system so that your URL
  handler of choice is used.

o Added a DDE server and implemented the "open" macro.

o Changed the file associations in the installer so that DDE is used. This
  means that a single instance of WEG can be used to handle open requests
  via file associations in Windows.

o Renamed the main "Edit" menu to "Options".
