@@ -15,6 +15,8 @@ o Added a "Focus When Finished" option to the global finder window. When set
   the global finder will display itself and grab focus when a find operation
   has finished.
 
+o Added optional colour printing.
+
 Changes since v2.9
 ==================
 
